  * center the status bar (LP: #424895)
  * make menuitems "Copy", "Copy Weblink", "Software Sources" work
  * updated po files from rosetta
  * make the default size bigger (LP: #425862)
  * merged the fixes from Murat Güneş (many thanks!)
  * when using the navigation bar to navigate back one (or more)
    elements, remove the elements from the navigation bar 
    (LP: #425810)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Sep 2009 11:23:58 +0200

software-store (0.2.2) karmic; urgency=low

  * softwarestore/view/appdetailsview.py:
    - fix icon theme name
  * softwarestore/view/appview.py:
    - ignore Unknown file format errors
    - no longer use single click, but use a custom CellRenderer
      instead that provides a single-click arrow at the end of
      the app description column (LP: #419791)
    - add custom CellRenderer that can draw generic overlay
      icons
    - use the overlay icon cell renderer to draw the installed
      icon as a overlay to the regular icon of the app
  * softwarestore/view/appview.py:
    - fix incorrect type mixing in iter_next (LP: #422036)
  * softwarestore/view/appdetailsview.py:
    - if the package is not available in the archive and there
      is no channel for it, do not display any buttons (LP: #424473)
  * utils/update-software-store:
    - use "Comment", "GenericName" and pkg.summary (in this order)
      for the application summary
    - add missing "locale.setlocale()"
  * add a stub help page
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Sep 2009 18:05:49 +0200

software-store (0.2.1) karmic; urgency=low

  * data/ui/SoftwareStore.ui:
    - add menu shortcuts (thanks to seb128)
  * show loading animation when fetching screenshots 
    (thanks to rugby471)
  * softwarestore/app.py:
    - fix crash when searching in sub-categories
  * softwarestore/view/appdetailsview.py:
    - add workaround for missing xpm rendering with webkit
    - scale icons to default icon size